<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root"
        tools:ignore="MissingConstraints"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_black"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_server_ip"
            style="@style/ConfigLay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_server"
                style="@style/TextTitle"
                android:text="@string/title_server" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_server_ip"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_hint_ip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_server" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_port"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_hint_port"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_server_ip" />

            <Button
                android:id="@+id/btn_next"
                style="@style/ConfigBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/config_btn_next"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_port" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_device"
            style="@style/ConfigLay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_device"
                style="@style/TextTitle"
                android:text="@string/title_device" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_device"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_hint_device"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_device" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_sip_id"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_hint_sip"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_device" />

            <Button
                android:id="@+id/btn_advanced"
                style="@style/ConfigBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/config_btn_advanced"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_sip_id"
                app:layout_constraintWidth_percent="0.2" />

            <Button
                android:id="@+id/btn_connect"
                style="@style/ConfigBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/config_btn_connect"
                app:layout_constraintLeft_toRightOf="@id/btn_advanced"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_sip_id" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_advanced"
            style="@style/ConfigLay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_advanced"
                style="@style/TextTitle"
                android:text="@string/title_advanced" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_realm"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_hint_realm"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_advanced" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_user"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_hint_user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_realm" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_pass"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_hint_pass"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_user" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_interval"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_interval"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_pass" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_expired"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/config_ed_expired"
                android:inputType="number"
                android:nextFocusDown="@+id/btn_back"
                android:nextFocusUp="@+id/ed_interval"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_interval" />

            <Button
                android:id="@+id/btn_back"
                style="@style/ConfigBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/config_btn_back"
                android:nextFocusUp="@+id/ed_expired"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_expired" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_connect"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>