<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape_login_bg">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_bg_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="52dp"
        android:src="@mipmap/ic_login_bg2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_34"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/login_edit_bg"
        android:gravity="center_vertical"
        android:hint="@string/hint_input_account"
        android:paddingLeft="24dp"
        android:textColor="@color/login_edit_color"
        android:textColorHint="@color/login_edit_hint_color"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_bg_1" />

    <RelativeLayout
        android:id="@+id/rel_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_30"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_account">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_edit_bg"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_password"
            android:paddingLeft="24dp"
            android:textColor="@color/login_edit_color"
            android:textColorHint="@color/login_edit_hint_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_79"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/login_button_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/text_login"
        android:textColor="@color/login_button_text_color"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_Version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="V1.0"
        android:textColor="@color/color_E8F5FF"
        android:textSize="14sp"
        android:layout_marginBottom="@dimen/dp_31"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>