<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_create_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/lay_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/light_blue_600"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_qbak" />
        <TextView
            android:id="@+id/tv_title"
            android:text="@string/group_member_selector"
            android:textColor="@color/white_color"
            android:textSize="18dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_detail"
            android:paddingEnd="8dp"
            android:textColor="@color/white_color"
            android:text="@string/group_member_add"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        android:background="@color/window_background_light"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/create_group_search_et"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:background="@drawable/search_bg"
            android:drawableStart="@drawable/ic_search_gray"
            android:drawablePadding="5dp"
            android:hint="@string/Search"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black_color"
            android:textColorHint="@color/gray_color_level_3"
            android:textSize="12sp" />


        <ImageView
            android:id="@+id/create_group_search_clear_iv"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_input_clear"
            android:visibility="gone"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/window_background_light"
        android:orientation="horizontal">

        <!--联系人选择列表-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/create_group_rvContacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/layout_animation_slide_right"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:scrollbars="none" />

        <com.hiar.ar110.widget.ContactSideBar
            android:id="@+id/sidebar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            app:chooseTextColor="@color/blue_color_level_7"
            app:circleRadius="14dp"
            app:hintTextSize="12sp"
            app:radius="0dp"
            app:side_backgroundColor="@color/gray_color_level_0"
            app:textColor="@color/contact_sidebar_textcolor"
            app:textSize="@dimen/extra_small_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:background="@color/white_color"
        android:gravity="center_vertical"
        android:paddingStart="7dp"
        android:paddingTop="13dp"
        android:paddingEnd="15dp"
        android:paddingBottom="13dp">

        <!--被选中的联系人头像列表-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSelectedContacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/create_group_confirm_tv"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:id="@+id/create_group_confirm_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/blue_color_level_2"
            android:textSize="14sp"
            tools:text="确定(3/5)" />
    </RelativeLayout>

</LinearLayout>